fix font scaling on iphone landscape

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -1,5 +1,6 @@
 html {
   font-size: 1em;
+  -webkit-text-size-adjust: none;
 }
 
 body {
